[project]
name = "hello-chat-bot"
version = "0.1.0"
description = "A simple AI chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.28.1",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hello-chat-bot = "hello_chat_bot.main:main"